fix navlogo, website map, cartlogo margin, padding carousel room and stuff

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -22,7 +22,9 @@ body.show-sidebar:before {
   opacity   : 1;
   visibility: visible;
 }
-
+a{
+  color: var(--colorWhite);
+}
 
 /* Navbar && Sidebar */
 .navbar {
