--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -55,13 +55,13 @@
 .booking-cta h1 {
     font-size     : 40px;
     text-transform: uppercase;
-    color         : #181818;
+    color         : var(--color2);
     font-weight   : 650;
 }
 
 .booking-cta p {
     font-size: 22px;
-    color    : #181818;
+    color    : var(--colorWhite);
 }
 
 .booking-form {
