--- a/assets/css/plan-site.css
+++ b/assets/css/plan-site.css
@@ -9,6 +9,10 @@ a:hover {
 
 ul li {
     list-style-type: none;
+    padding-bottom: 0.3em;
+}
+ul{
+    padding-left: 0.5em;
 }
 
 h5 a{
@@ -16,4 +20,7 @@ h5 a{
 }
 h5 a:hover{
     color: var(--color1);
+}
+h5{
+    margin-top: 1em;
 }
